<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/feature_group">
        <SwitchPreference
            android:defaultValue="false"
            android:key="block_up_share_goods"
            android:summary="@string/block_up_share_goods_summary"
            android:title="@string/block_up_share_goods_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="block_story_live"
            android:summary="@string/block_story_live_summary"
            android:title="@string/block_story_live_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="block_story_goods"
            android:summary="@string/block_story_goods_summary"
            android:title="@string/block_story_goods_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="story_background_auto_next"
            android:summary="@string/story_background_auto_next_summary"
            android:title="@string/story_background_auto_next_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="foreground_auto_next"
            android:summary="@string/foreground_auto_next_summary"
            android:title="@string/foreground_auto_next_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="media_button_control"
            android:summary="@string/media_button_control_summary"
            android:title="@string/media_button_control_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="hide_vip_center"
            android:summary="@string/hide_vip_center_summary"
            android:title="@string/hide_vip_center_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="disable_chapter_progress"
            android:summary="@string/disable_chapter_progress_summary"
            android:title="@string/disable_chapter_progress_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="sponsorblock_enable"
            android:summary="@string/sponsorblock_enable_summary"
            android:title="@string/sponsorblock_enable_title" />

        <Preference
            android:key="sponsorblock_settings"
            android:summary="@string/sponsorblock_settings_summary"
            android:title="@string/sponsorblock_settings_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/misc_group">
        <SwitchPreference
            android:defaultValue="true"
            android:key="show_info"
            android:summary="@string/show_info_summary"
            android:title="@string/show_info_title" />

        <Preference
            android:key="version"
            android:title="@string/version" />
    </PreferenceCategory>
</PreferenceScreen>
